// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrevNextStepper /> should disabled next button 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c0:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c0[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c0[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

<div>
  <div
    style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
  >
    <div />
    <button
      aria-pressed="false"
      class="c0"
      disabled=""
    >
      suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextStepper /> should hide previous button and render next button 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c0:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c0[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c0[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

<div>
  <div
    style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
  >
    <div />
    <button
      aria-pressed="false"
      class="c0"
    >
      suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextStepper /> should render previous and next button 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c0:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c0[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c0[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c1 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c1:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c1[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c1[aria-pressed="true"]:not([disabled]):hover,
.c1[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c1[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c1[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

<div>
  <div
    style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
  >
    <button
      aria-pressed="false"
      class="c0"
    >
      précédent
    </button>
    <div />
    <button
      aria-pressed="false"
      class="c1"
    >
      suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextStepper /> should render previous button and hide next button 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c0:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c0[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c0[aria-pressed="true"]:not([disabled]):hover,
.c0[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c0[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c0[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

<div>
  <div
    style="display: flex; flex-direction: row; margin-top: 20px; font-size: 1rem;"
  >
    <button
      aria-pressed="false"
      class="c0"
    >
      précédent
    </button>
    <div />
  </div>
</div>
`;
